   not easy to maintain over time with independent builds of documentation
   in NUT and the actual and historic snapshots for nut-website for example.
   Chapter/Section names will be adapted to produce "chunked HTML" file names
   instead. Documentation links rendered in GitHub UI should point to the HTML
   pages served by a current iteration of the NUT website. [PR #226, PR #669]

 - Published a new maintainer GPG key to sign tags and release artifacts,
   and possibly git commits as well, as part of solution for issue #1410.
   You can pull it from common OpenPGP servers with the following command:
+
----
:; gpg --recv-key DE0184DA7043DCF7
gpg: key DE0184DA7043DCF7: public key "Jim Klimov (Doing FOSS
         since last millennium) <jimklimov@gmail.com>" imported
gpg: Total number processed: 1
gpg:               imported: 1
----
+
as part of https://github.com/networkupstools/nut/issues/1410 solution.

 - Bug fixes for fallout possible due to "fightwarn" effort and other
   evolution in NUT v2.8.0 release:
   * The `upsdebugx()` and similar methods were converted to macros in #685
     to avoid useless data manipulations and requests for logged information,
     whose results would be ignored instantly because the debug level is
     too low. As issue #1455 and PR #1495 found, in two cases the called
     commands did "meaningfully" modify data -- so without debug logs the
     program misbehaved. A known regression for `upscode2` driver; might
     be or not be a problem with `upsd` server in NUT v2.8.0 release,
     fixed for NUT v2.8.1.
   * A table in `cyberpower-mib` (for `snmp-ups` driver) sources was
     arranged in NUT v2.8.0 release in a way that precluded the driver
     logic from looking at all of its entries. Also a fix for instant
     command definitions had in fact broken them due to other development.
     Regressions fixed for NUT v2.8.1 [#1432, #2029]
   * A change for file-change detection in `dummy-ups` driver for NUT